modehunt_1.0.1:
---------------------------------
- Corrected some minor typos.
- Update contact informations.