@@ -1,13 +1,13 @@
 Package: modehunt
 Type: Package
 Title: Multiscale Analysis for Density Functions
-Version: 1.0.1
-Date: 2007-10-04
-Author: Kaspar Rufibach <kaspar.rufibach@freesurf.ch> and Guenther Walther <gwalther@stanford.edu>
-Maintainer: Kaspar Rufibach <kaspar.rufibach@freesurf.ch>
+Version: 1.0.2
+Date: 2008-23-08
+Author: Kaspar Rufibach <kaspar.rufibach@gmail.com> and Guenther Walther <gwalther@stanford.edu>
+Maintainer: Kaspar Rufibach <kaspar.rufibach@gmail.com>
 Description: Given independent and identically distributed observations X(1), ..., X(n) from a density f,
  this package provides five methods to perform a multiscale analysis about f as well as the necessary critical
- values. The first method, introduced in Duembgen and Walther (2006), provides simultaneous confidence statements
+ values. The first method, introduced in Duembgen and Walther (2008), provides simultaneous confidence statements
  for the existence and location of local increases (or decreases) of f, based on all intervals I(all) spanned by
  any two observations X(j), X(k). The second method approximates the latter approach by using only a subset of
  I(all) and is therefore computationally much more efficient, but asymptotically equivalent. Omitting the additive
@@ -16,5 +16,5 @@ Description: Given independent and identically distributed observations X(1), ..
  compromise between adding Gamma or not, having intermediate power properties. The latter is again asymptotically
  equivalent to the first and was introduced in Rufibach and Walther (2007).
 License: GPL version 2 or newer
-URL: www.stanford.edu/~kasparr, www-stat.stanford.edu/~gwalther
-Packaged: Mon Oct  8 16:16:47 2007; rufibach
+URL: www-stat.stanford.edu/~gwalther
+Packaged: Sat Aug 23 17:02:20 2008; rufibach
