@@ -14,12 +14,12 @@ statements for the existence and location of local increases and decreases of a 
 \tabular{ll}{
 Package: \tab modehunt \cr
 Type: \tab Package \cr
-Version: \tab 1.0.1 \cr
-Date: \tab 2007-10-04 \cr
+Version: \tab 1.0.2 \cr
+Date: \tab 2008-23-08 \cr
 License: \tab GPL version 2 or newer \cr
 }
 
-In Duembgen and Walther (2006) a multiscale test statistic based on spacings was introduced. This method provides 
+In Duembgen and Walther (2008) a multiscale test statistic based on spacings was introduced. This method provides 
 simultaneous confidence statements for the existence and location of local increases and decreases of a density. 
 The procedure guarantees finite--sample significance levels and possesses certain asymptotic optimality 
 and adaptivity properties. However, since the local test statistics are computed on all \eqn{O(n^2)} intervals in 
@@ -28,10 +28,10 @@ the set
 \deqn{\mathcal{I}_{all} = \Bigl\{(j, \ k ) \ : \ 0 \le j < k \le n+1, \ k - j > 1\Bigr\},}
  
 this latter procedure is computationally very expensive. Furthermore, the correction term \eqn{\Gamma} employed
-by Duembgen and Walther (2006) to prevent the global test statistic to be dominated by the values of the local 
+by Duembgen and Walther (2008) to prevent the global test statistic to be dominated by the values of the local 
 test statistics on small scales needs in principle to be re--derived for any new local test statistic, a non--trivial
 task in general. In Rufibach and Walther (2007), two new procedures are proposed: One that within the original framework
-of Duembgen and Walther (2006) approximates the set \eqn{\mathcal{I}_{all}} by a specific subset of intervals 
+of Duembgen and Walther (2008) approximates the set \eqn{\mathcal{I}_{all}} by a specific subset of intervals 
 \eqn{\mathcal{I}_{app}} that only contains \eqn{O(n \log n )} intervals. It is shown that considering 
 \eqn{\mathcal{I}_{app}} yields a procedure that is in terms of power asymptotically equivalent to that based 
 on \eqn{\mathcal{I}_{all}}, however, computationally much more efficient.
@@ -39,12 +39,12 @@ on \eqn{\mathcal{I}_{all}}, however, computationally much more efficient.
 Finally, Rufibach and Walther (2007) propose a {\it block procedure}. Here, all intervals under consideration are
 grouped into blocks, where each interval in a block contains approximately the same number of original observations.
 Critical values are then computed per block. Again, this procedure is basically asymptotically equivalent to the
-standard approach proposed in Duembgen and Walther (2006), but again computationally much faster. It further offers
+standard approach proposed in Duembgen and Walther (2008), but again computationally much faster. It further offers
 a (finite--sample) tradeoff between employing or omitting the additive correction \eqn{\Gamma}.
 }
 
 \author{
-Kaspar Rufibach (maintainer), \email{kaspar.rufibach@freesurf.ch}, \cr \url{http://www.stanford.edu/~kasparr} 
+Kaspar Rufibach (maintainer), \email{kaspar.rufibach@gmail.com} 
 
 Guenther Walther, \email{gwalther@stanford.edu}, \cr \url{www-stat.stanford.edu/~gwalther}
 
@@ -54,9 +54,9 @@ Guenther Walther acknowledges support by NSF grants DMS-9875598, DMS-0505682, an
 }
 
 \references{
-Duembgen, L. and Walther, G. (2006).
+Duembgen, L. and Walther, G. (2008).
 Multiscale Inference about a density.
-To appear in \emph{Annals of Statistics.}
+\emph{Ann. Statist.}, \bold{36}, 1758--1785.
 
 Rufibach, K. and Walther, G. (2007).
 A general criterion for multiscale inference. 
@@ -79,7 +79,7 @@ cv.all <- cvModeAll[cvModeAll$alpha == alpha & cvModeAll$n == n, 3:4]
 cv.approx <- cvModeApprox[cvModeApprox$alpha == alpha & cvModeApprox$n == n, 3:4]
 cv.block <- cvModeBlock[cvModeBlock$alpha == alpha & cvModeBlock$n == n, 3:11]
 
-## standard procedure from Duembgen and Walther (2006)
+## standard procedure from Duembgen and Walther (2008)
 mod1 <- modeHunting(X.raw, lower = 0, upper = 1, cv.all, min.int = TRUE)
 
 ## procedure from Rufibach and Walther (2007) based on I_app
